--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Circles</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <script src="./assets/js/lib/paper-full.js" charset="utf-8"></script>
     <script src="./assets/js/lib/howler.min.js" charset="utf-8"></script>
   </head>
@@ -13,7 +14,7 @@
         <canvas id="myCanvas" resize></canvas>
       </div>
       <div class="layer layer-top">
-        <h1>Paper Underneath, HTML on Top</h1>
+        <h1>press a key<br>a to z</h1>
       </div>
     </div>
     <script type="text/paperscript" src="./assets/js/circles.js" charset="utf-8" canvas="myCanvas"></script>
